# learn-epub-parsing

./: .gitignore  pyproject.toml
docs/: EPUB_PARSING_GOLD_STANDARD.md  EPUB_UTILS.md  RBOOK_UPSTREAM_STRATEGY.md  TODO.md
epub-utils/: parse_epubs.py
rbook-utils/: Cargo.toml
rbook-utils/src/: lib.rs  main.rs
