[project]
name = "learn-epub-parsing"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = []

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.11"

[tool.pixi.pypi-dependencies]
epub-utils = "*"
